...
                  onPressed: _sendReply,
                  style: ElevatedButton.styleFrom(
                    backgroundColor: HonooColor.secondary,
                    padding: EdgeInsets.symmetric(horizontal: 10.w, vertical: 1.5.h),
                  ),
                  child: Text(
                    "Invia risposta",
                    style: GoogleFonts.libreFranklin(
                      fontSize: 16,
                      fontWeight: FontWeight.bold,
                      color: HonooColor.background,
                    ),
                  ),
...
